Add google analytics..

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>BlayBerg</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123776522-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-123776522-1');
+  </script>
 
   <!--    Google Fonts-->
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800|Poor+Story' rel='stylesheet' type='text/css'>
@@ -354,7 +363,7 @@
                 <p class="blog_news_content">Every farmer looks for tricks to better tomato farming in Kenya. Most Kenyan farmers started with tomato farms having been told of the huge profits in the market.
                    The truth sometimes is hard to bear as a lot of us,
                    small scale farmers  have lost fortunes in tomato farming Kenya .... </p>
-                <a href="https://softkenya.com/kenya/tomato-farming-in-kenya/" class="blog_link">more tips</a>
+                <a href="https://softkenya.com/kenya/tomato-farming-in-kenya/" class="blog_link" target="_blank">more tips</a>
               </div>
             </div>
           </div>
@@ -373,7 +382,7 @@
                 Capsicum (called pilipili hoho in Kenya) are a hardy type of plant. It is rarely attacked by diseases or pests though it still needs proper preventive care. Capsicum
                  farming in Kenya does best in hot areas the likes of the greater Eastern Province,
                   Coastal region, temperate central areas etc.</p>
-                <a href="https://softkenya.com/kenya/capsicum-farming-in-kenya/" class="blog_link">more tips</a>
+                <a href="https://softkenya.com/kenya/capsicum-farming-in-kenya/" class="blog_link" target="_blank">more tips</a>
               </div>
             </div>
           </div>
@@ -391,7 +400,7 @@
                   farming where plants are grown in a covered structure with PVC
                    paper on the roof for ventilation purposes, a net-like material is used on
                    the sides. This makes sure that the air circulation is good... </p>
-                <a href="https://softkenya.com/kenya/greenhouse-farming-in-kenya/" class="blog_link">more tips</a>
+                <a href="https://softkenya.com/kenya/greenhouse-farming-in-kenya/" class="blog_link" target="_blank">more tips</a>
               </div>
             </div>
           </div>
