Add navigation configurations.

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <h2>Our Mission</h2>
                 <p style="line-height:2.0em">Our desire is to foster a vibrant economy driven by value-added agriculture by creating and facilitating the development of value added Agricultural businesses
                 </p>
-                <a href="" class="custom_btn">Read  More</a>
+                <a href="#welcome" class="custom_btn">Read  More</a>
               </div>
             </div>
           </div>
@@ -158,7 +158,7 @@
               <div class="slider_text">
                 <h2>Our Vision</h2>
                 <p style="line-height:2.0em">To improve economic livelihoods of the households we serve by reducing the cost of agricultural production by more than 50% and by improving production by more than 70%</p>
-                <a href="" class="custom_btn">Read  More</a>
+                <a href="#welcome" class="custom_btn">Read  More</a>
               </div>
             </div>
           </div>
@@ -172,7 +172,7 @@
                 <h2>Our Values</h2>
                 <p style="line-height:2.0em">We are <mark>committed</mark> to <mark>delivering value</mark> through
                   <mark>innovative solutions</mark> and <mark>partnerships</mark></p>
-                <a href="" class="custom_btn">Read  More</a>
+                <a href="#welcome" class="custom_btn">Read  More</a>
               </div>
             </div>
           </div>
