--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
                                     <span class="icon-bar"></span>
                                 </button>
               <a class="navbar-brand custom_navbar-brand" href="#">
-                <h3 style="font-family: 'Poor Story', cursive; font-weight:bolder; font-color:rgb(92, 145, 98)">BLAYBERG</h3>
+                <h3 style="font-family: 'Poor Story', cursive; font-weight:bolder; font-color:rgb(92, 145, 98)"> <img src="img/BlayBerg-01.png"
+                  alt="BlayBerg" style="max-height:100px; margin-top:-25px" class="img-responsive"> </h3>
               </a>
             </div>
             <!--End of navbar-header-->
@@ -146,7 +147,9 @@
             <div class="carousel-caption">
               <div class="slider_text">
                 <h2>Our Mission</h2>
-                <p style="line-height:2.0em">Our desire is to foster a vibrant economy driven by value-added agriculture by creating and facilitating the development of value added Agricultural businesses
+                <p style="line-height:2.0em">Our desire is to foster a vibrant economy driven by
+                   sustainable agriculture though us creating and facilitating development
+                    of value added agriculture.
                 </p>
                 <a href="#welcome" class="custom_btn">Read  More</a>
               </div>
@@ -160,7 +163,10 @@
             <div class="carousel-caption">
               <div class="slider_text">
                 <h2>Our Vision</h2>
-                <p style="line-height:2.0em">To improve economic livelihoods of the households we serve by reducing the cost of agricultural production by more than 50% and by improving production by more than 70%</p>
+                <p style="line-height:2.0em">To improve economic livelihoods of households
+                  we serve by significantly reducing cost
+                   of production while maximizing production output.
+                </p>
                 <a href="#welcome" class="custom_btn">Read  More</a>
               </div>
             </div>
@@ -210,7 +216,9 @@
                   <i class="fa fa-leaf"></i>
                 </div>
                 <h4>Innovative Solutions</h4>
-                <p>We believe that innovative solutions are the key to economic freedom and a sustainable future. We strive to build solutions that positively impact the livelihoods of those we serve. </p>
+                <p>We believe that innovative
+                  solutions are the key to economic freedom and a
+                   sustainable future. We strive to build solutions that positively impact the livelihoods of those we serve. </p>
               </div>
             </div>
           </div>
@@ -224,7 +232,11 @@
                   <i class="fa fa-refresh"></i>
                 </div>
                 <h4>Commitment</h4>
-                <p>We are committed to a sustainable future for our future generations. We are committed to changing the lives of millions through our products and we are committed to providing quality service.</p>
+                <p>We are commited to
+                  providing sustainable solutions which inspire a
+                  positive change  to the lives of millions
+                  through our products and quality services.
+                 </p>
               </div>
             </div>
           </div>
@@ -238,7 +250,7 @@
                   <i class="fa fa-tint"></i>
                 </div>
                 <h4>Partnerships</h4>
-                <p>We believe in partnerships and teamwork.</p>
+                <p>We encourage and foster partnerships and teamwork for sustainability and to have a positive impact.</p>
               </div>
             </div>
           </div>
@@ -525,7 +537,8 @@
         <div class="col-md-8">
           <div class="volunteer_content">
             <h3>Let's be <span>partners</span></h3>
-            <p>Join us a partner and grow with us. It doesn't matter where you are, who you are or what you do hit us up and we will engage you.</p>
+            <p>Partner with us and let us grow together. Contact us and we will engage you.
+            </p>
           </div>
         </div>
         <!--End of col-md-8-->
@@ -548,7 +561,7 @@
         <div class="colmd-12">
           <div class="contact_area text-center">
             <h3>get in touch</h3>
-            <p>We would love to hear from you, feel free to always to reach out.</p>
+            <p>We would love to hear from you, feel free to always reach out to us.</p>
           </div>
         </div>
       </div>
