Slow down carousel and add links to facebook, twitter and youtube pages.

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
             <!--End of col-md-4-->
             <div class="col-md-4">
               <div class="social_icon text-right">
-                <a href=""><i class="fa fa-facebook"></i></a>
-                <a href=""><i class="fa fa-twitter"></i></a>
-                <a href=""><i class="fa fa-google-plus"></i></a>
-                <a href=""><i class="fa fa-youtube"></i></a>
+                <a href="https://www.facebook.com/BlaybergLtd" target="_blank"><i class="fa fa-facebook"></i></a>
+                <a href="https://twitter.com/BlaybergLtd" target="_blank"><i class="fa fa-twitter"></i></a>
+                <!-- <a href=""><i class="fa fa-google-plus"></i></a> -->
+                <a href="https://www.youtube.com/channel/UCSezgIjB8kn6XOP3Kun7MzQ?view_as=public" target="_blank"><i class="fa fa-youtube"></i></a>
               </div>
             </div>
             <!--End of col-md-4-->
@@ -131,7 +131,7 @@
 
   <!--Start of slider section-->
   <section id="slider">
-    <div id="carousel-example-generic" class="carousel slide carousel-fade" data-ride="carousel" data-interval="3000">
+    <div id="carousel-example-generic" class="carousel slide carousel-fade" data-ride="carousel" data-interval="7000">
       <!-- Indicators -->
       <ol class="carousel-indicators">
         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
