Add contact information.

--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
               <!-- CONTACT FORM -->
               <div class="contact-form wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s">
                 <div id="message"></div>
-                <form action="https://formspree.io/biinewtondev@gmail.com" class="form-horizontal contact-1" method="post">
+                <form action="https://formspree.io/contact@blayberg.com" class="form-horizontal contact-1" method="post">
                   <div class="form-group">
                     <div class="col-sm-6">
                       <input type="text" class="form-control" name="name" id="name" placeholder="Name">
@@ -631,14 +631,17 @@
   <section id="footer">
     <div class="container">
       <div class="row text-center">
-        <div class="col-md-6">
+        <div class="col-md-9">
           <div class="copyright">
-            <p>@ 2018 - BlayBerg Limited</p>
+            <p> <span style="font-weight:bolder">External Content Disclaimer:</span> Our website contains links to websites owned and operated by third parties.
+              If you use these links, you leave our Website. These links are provided for your information and
+              convenience only and are not an endorsement by Blayberg Limited of
+              the content of such linked websites or third parties. </p>
           </div>
         </div>
         <div class="col-md-6">
           <div class="designer">
-            <p>Terms and Conditions Apply</p>
+            <p></p>
           </div>
         </div>
       </div>
