--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
               <!-- CONTACT FORM -->
               <div class="contact-form wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s">
                 <div id="message"></div>
-                <form action="https://formspree.io/contact@blayberg.com" class="form-horizontal contact-1" method="post">
+                <form action="https://formspree.io/newton@blayberg.com" class="form-horizontal contact-1" method="post">
                   <div class="form-group">
                     <div class="col-sm-6">
                       <input type="text" class="form-control" name="name" id="name" placeholder="Name">
