--- a/index.html
+++ b/index.html
@@ -175,12 +175,12 @@
         <!--End of Item-->
         <div class="item">
           <div class="slider_overlay">
-            <img src="img/img3.jpg" alt="...">
+            <img src="img/nature.jpg" alt="...">
             <div class="carousel-caption">
               <div class="slider_text">
                 <h2>Our Values</h2>
-                <p style="line-height:2.0em">We are <mark>committed</mark> to <mark>delivering value</mark> through
-                  <mark>innovative solutions</mark> and <mark>partnerships</mark></p>
+                <p style="line-height:2.0em">We are <u>committed</u> to <u>delivering value</u> through
+                  <u>innovative solutions</u> and <u>partnerships</u></p>
                 <a href="#welcome" class="custom_btn">Read  More</a>
               </div>
             </div>
@@ -435,7 +435,7 @@
       </div>
     </div>
     <!--End of col-md-2-->
-    <div class="colum">
+    <!-- <div class="colum"> -->
       <div class="container">
         <div class="row">
           <form action="/">
@@ -467,9 +467,6 @@
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="notes">
               <div class="note capsicum">
-                <div class="img_overlay">
-                  <p>capsicum</p>
-                </div>
                 <img src="img/capsicum1.jpg" alt="" style="height:200px;width:220px">
               </div>
               <div class="note capsicum">
@@ -507,7 +504,7 @@
         <!--End of row-->
       </div>
       <!--End of container-->
-    </div>
+    <!-- </div> -->
     <!--End of colum-->
   </section>
 
