--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
                                     <span class="icon-bar"></span>
                                     <span class="icon-bar"></span>
                                 </button>
-              <a class="navbar-brand custom_navbar-brand" href="#header">
+              <a class="navbar-brand custom_navbar-brand" href="#">
                 <h3 style="font-family: 'Poor Story', cursive; font-weight:bolder; font-color:rgb(92, 145, 98)"> <img src="img/BlayBerg-02.png"
-                  alt="BlayBerg" class="img-responsive"> </h3>
+                  alt="BlayBerg" style="max-height:100px; margin-top:-25px" class="img-responsive"> </h3>
               </a>
             </div>
             <!--End of navbar-header-->
