improvement: modify logo to be more responsive.

--- a/index.html
+++ b/index.html
@@ -96,10 +96,12 @@
                                     <span class="icon-bar"></span>
                                     <span class="icon-bar"></span>
                                 </button>
-              <a class="navbar-brand custom_navbar-brand" href="#">
+              <!-- <img src="img/BlayBerg-02.png" alt="BlayBerg" class="navbar-brand"> -->
+              <a href="#" class="brand"> <img src="img/BlayBerg-02.png" alt="BlayBerg"> </a>
+              <!-- <a class="navbar-brand custom_navbar-brand" href="#">
                 <h3 style="font-family: 'Poor Story', cursive; font-weight:bolder; font-color:rgb(92, 145, 98)"> <img src="img/BlayBerg-02.png"
                   alt="BlayBerg" style="max-height:100px; margin-top:-25px" class="imgage"> </h3>
-              </a>
+              </a> -->
             </div>
             <!--End of navbar-header-->
 
